# Sheildantic

./: .gitignore  README.md  pyproject.toml
src/: core.py  fastapi.py  models.py
tests/: test_fastapi_integration.py
