[project]
name = "sheildantic-nosync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "multidict>=6.1.0",
    "nh3>=0.2.20",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
]
